--- a/application.yml
+++ b/application.yml
@@ -1,13 +1,16 @@
 spring:
-  profiles:
-    active: dev
+	profiles:
+		active:
+			- dev
+----
+spring:
+    profiles: dev #开发环境
+    application:
+        name: microservicecloud-config-wangzhao-dev
 ---
 spring:
-  profiles: dev # 开发环境
-  application: 
-    name: microservicecloud-config-wangzhao-dev
----
-spring:
-  profiles: test # 测试环境
-  application:
-    name: microservicecloud-config-wangzhao-test
+    profiles: test #测试环境
+    application:
+        name: microservicecloud-config-wangzhao-test
+    
+#请保存为UTF-8格式
